Bug 446647 - Searching for tag in text field and removing said tag does not update brush chooser view.
Summary: Searching for tag in text field and removing said tag does not update brush c...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tagging (other bugs)
Version First Reported In: 5.0.0-beta5
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-12-07 22:21 UTC by Eoin O'Neill
Modified: 2021-12-16 04:11 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Eoin O'Neill 2021-12-07 22:21:21 UTC
STEPS TO REPRODUCE
1. Search for #erasers w/ tag drop down set to all 
2. Right click on an eraser and remove the erasers tag.

OBSERVED RESULT
`#erasers` search results are not updated, continues to show the same brushes until a character is changed in the search field box.

EXPECTED RESULT
`#erasers` search results should update whenever tagging information is changed in the model. 

ADDITIONAL INFORMATION
This is relatively low priority as it is easy to solve on a users end. It's a nice to have at this point.
Comment 1 Eoin O'Neill 2021-12-16 04:11:11 UTC
Git commit 6fb24603d629dd40611b14582efd800bb32f30e2 by Eoin O'Neill.
Committed on 16/12/2021 at 04:08.
Pushed by eoinoneill into branch 'krita/5.0'.

Workaround for removing tag when searching for tag in text field.

It's a bit hacky, but there's a work around now for updating the search
results to match changes made to tags. It seemed more logical to track
for tag removal and additions within the ProxyModel itself, but for
some reason invalidateFilter would only update after removing
a second resource from the same tag.

M  +2    -0    libs/resourcewidgets/KisResourceItemChooserContextMenu.cpp
M  +11   -1    libs/resourcewidgets/KisResourceTaggingManager.cpp

https://invent.kde.org/graphics/krita/commit/6fb24603d629dd40611b14582efd800bb32f30e2